# CubicScript

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig  build.zig.zon  main.c
c_impl/: .gitignore  CMakeLists.txt  build.zig
c_impl/docs/: script.md  struct.md  syntax.md
c_impl/include/: cubic_script.h  cubic_script.hpp
c_impl/src/: cpp_tests.cpp  main.zig  root.zig  tests.zig  validate_compilation_target.c
c_impl/src/interpreter/: bytecode.c  bytecode.h  bytecode.zig  function_definition.c  function_definition.h  function_definition.zig  interpreter.c  interpreter.h  interpreter.zig  operations.c  operations.h  stack.c  stack.h  stack.zig  value_tag.h
c_impl/src/platform/: architecture.h  mem.c
c_impl/src/primitives/: array.c  array.h  array.zig  context.c  context.h  context.hpp  map.c  map.h  map.zig  primitives_context.c  primitives_context.h  primitives_rtti.h  script_value.c  script_value.h  script_value.hpp  script_value.zig  string.c  string.h  string.zig  value_tag.h  values.zig
c_impl/src/primitives/array/: array.c  array.h  array.hpp  array.zig  array_tests.cpp
c_impl/src/primitives/error/: error.c  error.h  error.zig
c_impl/src/primitives/function/: function.c  function.h  function.zig
c_impl/src/primitives/interface/: interface.h
c_impl/src/primitives/map/: map.c  map.h  map.zig
c_impl/src/primitives/matrix/: matrix.h
c_impl/src/primitives/option/: option.c  option.h  option.zig
c_impl/src/primitives/reference/: reference.c  reference.h  reference.zig
c_impl/src/primitives/result/: result.c  result.h  result.zig
c_impl/src/primitives/set/: set.c  set.h  set.zig
c_impl/src/primitives/string/: string.c  string.h  string.hpp  string.zig  string_tests.cpp
c_impl/src/primitives/sync_ptr/: sync_ptr.c  sync_ptr.h  sync_ptr.zig
c_impl/src/primitives/vector/: vector.c  vector.h  vector.zig
c_impl/src/program/: function_call_args.c  function_call_args.h  function_map.c  function_map.h  program.c  program.h  program_runtime_error.h  protected_arena.h
c_impl/src/sync/: atomic.h  atomic_ref_count.c  locks.c  locks.h  locks.zig  mutex.c  mutex.h  rwlock.c  rwlock.h  script_thread.c  script_thread.h  sync_queue.c  sync_queue.h  sync_queue.zig  thread.c
c_impl/src/util/: atomic_ref_count.c  atomic_ref_count.h  bitwise.h  global_allocator.c  global_allocator.h  global_allocator.zig  hash.c  hash.h  math.c  mem.c  mem.h  mem.zig  ordering.h  ordering.zig  os.c  panic.c  rwlock.c  rwlock.h  script_thread.c  script_thread.h  script_thread.zig  simd.c  simd.h  unreachable.h
docs/: ISA.md  SCRIPT.md  debugging.md  syntax.md
include/: cubic_script.h
src/: c_basic_types.h  c_export.zig  doctest.h  lib.zig  main.zig  root.zig  tests.zig  validate_compilation_target.c
src/compiler/: ClassBuilder.zig  FunctionBuilder.zig  ast.c  ast.h  ast.zig  build_options.c  build_options.h  compiler.c  compiler.h  compiler_callbacks.h  parser.c  parser.h  parser.zig  result_ast_node.h  stack_assignment.c  stack_assignment.h  stack_variables.c  stack_variables.h  stack_variables.zig  tokenizer.c  tokenizer.h  tokenizer.zig
src/compiler/ast_nodes/: ast_node_array.h  binary_expression.c  binary_expression.h  conditional_node.c  conditional_node.h  expression_value.c  expression_value.h  file_node.c  file_node.h  function_call.c  function_call.h  function_node.c  function_node.h  math_operation_node.c  math_operation_node.h  member_access.c  member_access.h  member_assign.c  member_assign.h  member_variable.c  member_variable.h  parse_statements.h  return_node.c  return_node.h  struct_node.c  struct_node.h  sync_block.c  sync_block.h  type_resolution_info.c  type_resolution_info.h  (+6 more)
src/interpreter/: bytecode.h  bytecode_array.c  bytecode_array.h  function_definition.c  function_definition.zig  interpreter.c  interpreter.h  interpreter.zig  operations.c  operations.h  stack.c  stack.h  value_tag.h
src/platform/: mem.c  mem.h  mem.zig
src/primitives/: context.c  context.h  context.hpp  script_value.zig
src/program/: function_call_args.h  function_map.c  function_map.h  program.c  program.h  program.zig  program_internal.h  program_runtime_error.h  program_type_context.h  protected_arena.c  protected_arena.zig  string_slice_pointer_map.h  type_map.c  type_map.h
src/runtime/: cpu_features.c
src/state/: Bytecode.zig  CubicScriptState.zig  Errors.zig  Stack.zig  global_allocator.zig  instruction.zig  interpreter.zig  sync_queue.zig
src/sync/: atomic.c  locks.c  locks.h  locks.zig  sync_queue.h  sync_queue.zig  thread.h
src/types/: RwLock.zig  array.zig  atomic_ref_count.zig  class.zig  function.zig  hash.zig  interface.zig  map.zig  math.zig  matrix.zig  option.zig  primitives.zig  references.zig  result.zig  set.zig  shared.zig  string.zig  string_simd.c  string_simd.cpp  string_simd_x86.c  vector.zig
src/util/: context_size_round.h  hash.c  hash.h  math.c  math.h  ordering.h  panic.c  panic.h  simd.c  simd.h  unreachable.h  utf8.c  utf8.h
(+42 files in other folders)
